--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Installer git-web-hook for composer project",
     "license": "MIT",
     "require": {
-        "amaxlab/git-web-hook": "~1.0",
+        "amaxlab/git-web-hook": "0.1.x-dev",
         "monolog/monolog": "~1.13"
     },
     "minimum-stability": "beta",
@@ -12,6 +12,10 @@
         {
             "name": "Egor Zyuskin",
             "email": "egor@zyuskin.ru"
+        },
+        {
+            "name": "Igor Bodnar",
+            "email": "bodnar_i@mail.ru"
         }
     ]
 }
