composer.json update

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
     },
     "minimum-stability": "beta",
     "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
+    },
     "authors": [
         {
             "name": "Egor Zyuskin",
